button size is correct on mobile

--- a/src/components/Container/WritingSamples/CustomButtonGroup/CustomButtonGroup.module.css
+++ b/src/components/Container/WritingSamples/CustomButtonGroup/CustomButtonGroup.module.css
@@ -1,24 +1,15 @@
 .button-container {
-  /* overflow: visible; */
-  /* margin: 0 auto; */
+  /* width: auto; */
 }
 
-/* .buttons {
+.b {
   width: 30px;
-} */
+}
 
-@media only screen
+/* @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px) {
-  [class*="button-container"] {
-    /* width: 40vw; */
-    /* height: 10px; */
-    /* margin: 0 auto; */
-    /* height: 100px; */
-    /* text-align: center; */
+  [class*="b"] {
+    max-width: 100px;
   }
-
-  [class*="buttons"] {
-    /* width: 30%; */
-  }
-}
+} */
